fix(material/list): fix up disabled list item styles (#18881)
Fixes a couple of issues with the list item's disabled styles:
- In dark themes we were setting the disabled styles to black. This looks out of place
since it's not how other components style themselves under dark themes.
- The disabled styles are somewhat similar to the selected styles. These changes also
set the text color to the disabled text color to make it easier to distinguish.

--- a/src/material/core/theming/_palette.scss
+++ b/src/material/core/theming/_palette.scss
@@ -705,7 +705,7 @@ $dark-theme-background-palette: (
   selected-disabled-button: map.get($grey-palette, 800),
   disabled-button-toggle: black,
   unselected-chip: map.get($grey-palette, 700),
-  disabled-list-option: black,
+  disabled-list-option: rgba(white, 0.12),
   tooltip: map.get($grey-palette, 700),
 );
 
